<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/paymentInfoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/payment_info"
            android:textColor="@color/text_black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/makePaymentButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/paymentInfoTextView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/cardholder_name"
                    android:textColor="@color/text_light_black"
                    android:textSize="18sp"
                    android:textStyle="bold" />


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/rounded_corner_white"
                    android:elevation="3dp"
                    android:fontFamily="@font/roboto"
                    android:padding="8dp"
                    android:textColor="@color/text_light_black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/card_number"
                    android:textColor="@color/text_light_black"
                    android:textSize="18sp"
                    android:textStyle="bold" />


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cardNumberEditText"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/rounded_corner_white"
                    android:drawableEnd="@drawable/ic_visa"
                    android:elevation="3dp"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/_4599_7568_6354_4542"
                    android:inputType="number"
                    android:padding="8dp"
                    android:textColor="@color/text_light_black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/expire_on"
                    android:textColor="@color/text_light_black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/monthEditText"
                        android:layout_width="70dp"
                        android:layout_height="30dp"
                        android:layout_alignParentStart="true"
                        android:background="@drawable/rounded_corners_yellow"
                        android:backgroundTint="@color/light_yellow"
                        android:fontFamily="@font/roboto"
                        android:gravity="center|center_vertical"
                        android:hint="@string/mm"
                        android:inputType="number"
                        android:textColor="@color/text_light_black" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/yearEditText"
                        android:layout_width="70dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="16dp"
                        android:layout_toEndOf="@+id/monthEditText"
                        android:background="@drawable/rounded_corners_yellow"
                        android:backgroundTint="@color/light_yellow"
                        android:fontFamily="@font/roboto"
                        android:gravity="center|center_vertical"
                        android:hint="@string/yyyy"
                        android:inputType="number"
                        android:textColor="@color/text_light_black" />

                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/cvc_code"
                    android:textColor="@color/text_light_black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cvcCodeEditText"
                    android:layout_width="90dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/rounded_corners_yellow"
                    android:backgroundTint="@color/colorPrimary"
                    android:elevation="3dp"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:hint="@string/_839"
                    android:inputType="number"
                    android:textColor="@color/text_light_black" />

            </LinearLayout>

        </ScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/makePaymentButton"
            style="@style/ButtonStyle"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:elevation="1dp"
            android:fontFamily="@font/roboto"
            android:text="@string/make_a_payment"
            android:textSize="12sp"
            app:cornerRadius="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>